--- a/projects/common-primeng/package.json
+++ b/projects/common-primeng/package.json
@@ -1,9 +1,9 @@
 {
   "name": "common-primeng",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "peerDependencies": {
-    "@angular/common": "^16.2.8",
-    "@angular/core": "^16.2.8"
+    "@angular/common": ">=16.2.8",
+    "@angular/core": ">=16.2.8"
   },
   "dependencies": {
     "tslib": "^2.3.0"
